grammaParser.java
package pack;// Generated from java-escape by ANTLR 4.11.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class grammaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, OR=2, NOT=3, EQ=4, COMPARE=5, EQGR=6, EQLT=7, INCR=8, DECR=9, COMMA=10, 
		SEMI=11, DOT=12, LPAREN=13, RPAREN=14, LCURLY=15, RCURLY=16, LANGLE=17, 
		RANGLE=18, QUOTES=19, DOC=20, ND=21, TXT=22, STRING=23, PLUS=24, MINUS=25, 
		MULT=26, DEVISION=27, LSQUARE=28, RSQUARE=29, COLON=30, NUMBER=31, DOCUMENT=32, 
		NODE=33, ATTR=34, TEXT=35, BOOL=36, YES=37, NO=38, IF=39, FOR=40, THEN=41, 
		ELSE=42, START=43, VALUE=44, NAME=45, INTEXT=46, SETROOT=47, GETROOT=48, 
		RETURN=49, WHILE=50, UNTIL=51, EDIT=52, FIND=53, END=54, DO=55, CHILDREN=56, 
		ATTRS=57, READ=58, WRITE=59, ID=60, INT=61, TAB=62, N=63, WSS=64, WS=65;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_math = 2, RULE_expr = 3, RULE_const = 4, 
		RULE_func = 5, RULE_return = 6, RULE_call = 7, RULE_cast = 8, RULE_infunc = 9, 
		RULE_funcname = 10, RULE_par = 11, RULE_comand = 12, RULE_if = 13, RULE_else = 14, 
		RULE_part = 15, RULE_for = 16, RULE_binary = 17, RULE_in = 18, RULE_out = 19, 
		RULE_boolexpr = 20, RULE_while = 21, RULE_until = 22, RULE_type = 23, 
		RULE_chindex = 24, RULE_atindex = 25, RULE_assign = 26, RULE_action = 27, 
		RULE_form = 28, RULE_allindex = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "math", "expr", "const", "func", "return", "call", 
			"cast", "infunc", "funcname", "par", "comand", "if", "else", "part", 
			"for", "binary", "in", "out", "boolexpr", "while", "until", "type", "chindex", 
			"atindex", "assign", "action", "form", "allindex"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'or'", "'!='", "'='", "'=='", "'>='", "'<='", "'>>'", 
			"'<<'", "','", "';'", "'.'", "'('", "')'", "'{'", "'}'", "'<'", "'>'", 
			"'\"'", "'doc'", "'nd'", "'txt'", null, "'+'", "'-'", "'*'", "'/'", "'['", 
			"']'", "':'", "'number'", "'document'", "'node'", "'attribute'", "'text'", 
			"'bool'", "'yes'", "'net'", "'if'", "'for'", "'then'", "'else'", "'Start'", 
			"'value'", "'name'", "'in_text'", "'set_root'", "'get_root'", "'return'", 
			"'while'", "'until'", "'edit'", "'find'", "'end'", "'do'", "'children'", 
			"'attributes'", "'read'", "'write'", null, null, null, null, "'\\r'", 
			"' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "OR", "NOT", "EQ", "COMPARE", "EQGR", "EQLT", "INCR", "DECR", 
			"COMMA", "SEMI", "DOT", "LPAREN", "RPAREN", "LCURLY", "RCURLY", "LANGLE", 
			"RANGLE", "QUOTES", "DOC", "ND", "TXT", "STRING", "PLUS", "MINUS", "MULT", 
			"DEVISION", "LSQUARE", "RSQUARE", "COLON", "NUMBER", "DOCUMENT", "NODE", 
			"ATTR", "TEXT", "BOOL", "YES", "NO", "IF", "FOR", "THEN", "ELSE", "START", 
			"VALUE", "NAME", "INTEXT", "SETROOT", "GETROOT", "RETURN", "WHILE", "UNTIL", 
			"EDIT", "FIND", "END", "DO", "CHILDREN", "ATTRS", "READ", "WRITE", "ID", 
			"INT", "TAB", "N", "WSS", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public grammaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(grammaParser.START, 0); }
		public TerminalNode COLON() { return getToken(grammaParser.COLON, 0); }
		public List<TerminalNode> N() { return getTokens(grammaParser.N); }
		public TerminalNode N(int i) {
			return getToken(grammaParser.N, i);
		}
		public TerminalNode EOF() { return getToken(grammaParser.EOF, 0); }
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(grammaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(grammaParser.ID, i);
		}
		public List<TerminalNode> EQ() { return getTokens(grammaParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(grammaParser.EQ, i);
		}
		public List<ConstContext> const_() {
			return getRuleContexts(ConstContext.class);
		}
		public ConstContext const_(int i) {
			return getRuleContext(ConstContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaVisitor ) return ((grammaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 135291469824L) != 0) {
				{
				{
				setState(60);
				func();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(66);
				match(ID);
				setState(67);
				match(EQ);
				setState(68);
				const_();
				setState(69);
				match(N);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(START);
			setState(77);
			match(COLON);
			setState(78);
			match(N);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAB) {
				{
				{
				setState(79);
				stat();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public TerminalNode N() { return getToken(grammaParser.N, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public List<TerminalNode> TAB() { return getTokens(grammaParser.TAB); }
		public TerminalNode TAB(int i) {
			return getToken(grammaParser.TAB, i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaVisitor ) return ((grammaVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(87);
				match(TAB);
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TAB );
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(92);
				assign();
				}
				break;
			case 2:
				{
				setState(93);
				action();
				}
				break;
			}
			setState(96);
			match(N);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MathContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(grammaParser.ID, 0); }
		public TerminalNode INCR() { return getToken(grammaParser.INCR, 0); }
		public TerminalNode DECR() { return getToken(grammaParser.DECR, 0); }
		public MathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).enterMath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).exitMath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaVisitor ) {
				try {
					return ((grammaVisitor<? extends T>)visitor).visitMath(this);
				} catch (Exception e) {
					throw new RuntimeException(e.getMessage());
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final MathContext math() throws RecognitionException {
		MathContext _localctx = new MathContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_math);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(ID);
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==INCR || _la==DECR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public ParContext par() {
			return getRuleContext(ParContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BinaryContext binary() {
			return getRuleContext(BinaryContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaVisitor ) {
				try {
					return ((grammaVisitor<? extends T>)visitor).visitExpr(this);
				} catch (Exception e) {
					throw new RuntimeException(e.getMessage());
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LCURLY:
			case LANGLE:
			case DOC:
			case ND:
			case TXT:
			case STRING:
			case LSQUARE:
			case YES:
			case NO:
			case ID:
			case INT:
				{
				setState(102);
				form();
				}
				break;
			case LPAREN:
				{
				setState(103);
				par();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(112);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExprContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expr);
					setState(106);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(107);
					binary();
					setState(108);
					expr(4);
					}
					} 
				}
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstContext extends ParserRuleContext {
		public Token d;
		public Token n;
		public Token a;
		public Token s;
		public Token i;
		public TerminalNode RCURLY() { return getToken(grammaParser.RCURLY, 0); }
		public TerminalNode LCURLY() { return getToken(grammaParser.LCURLY, 0); }
		public List<TerminalNode> STRING() { return getTokens(grammaParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(grammaParser.STRING, i);
		}
		public List<TerminalNode> ID() { return getTokens(grammaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(grammaParser.ID, i);
		}
		public TerminalNode COLON() { return getToken(grammaParser.COLON, 0); }
		public TerminalNode RSQUARE() { return getToken(grammaParser.RSQUARE, 0); }
		public TerminalNode LSQUARE() { return getToken(grammaParser.LSQUARE, 0); }
		public TerminalNode RANGLE() { return getToken(grammaParser.RANGLE, 0); }
		public TerminalNode LANGLE() { return getToken(grammaParser.LANGLE, 0); }
		public TerminalNode INT() { return getToken(grammaParser.INT, 0); }
		public TerminalNode YES() { return getToken(grammaParser.YES, 0); }
		public TerminalNode NO() { return getToken(grammaParser.NO, 0); }
		public ConstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).enterConst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).exitConst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaVisitor ) {
				try {
					return ((grammaVisitor<? extends T>)visitor).visitConst(this);
				} catch (Exception e) {
					throw new RuntimeException(e.getMessage());
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final ConstContext const_() throws RecognitionException {
		ConstContext _localctx = new ConstContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_const);
		int _la;
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LCURLY:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				((ConstContext)_localctx).d = match(LCURLY);
				setState(116);
				_la = _input.LA(1);
				if ( !(_la==STRING || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(117);
				match(RCURLY);
				}
				break;
			case LSQUARE:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				((ConstContext)_localctx).n = match(LSQUARE);
				setState(119);
				_la = _input.LA(1);
				if ( !(_la==STRING || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(120);
				match(COLON);
				setState(121);
				_la = _input.LA(1);
				if ( !(_la==STRING || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(122);
				match(RSQUARE);
				}
				break;
			case LANGLE:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				((ConstContext)_localctx).a = match(LANGLE);
				setState(124);
				_la = _input.LA(1);
				if ( !(_la==STRING || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(125);
				match(COLON);
				setState(126);
				_la = _input.LA(1);
				if ( !(_la==STRING || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(127);
				match(RANGLE);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				((ConstContext)_localctx).s = match(STRING);
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 5);
				{
				setState(129);
				((ConstContext)_localctx).i = match(INT);
				}
				break;
			case YES:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				match(YES);
				}
				break;
			case NO:
				enterOuterAlt(_localctx, 7);
				{
				setState(131);
				match(NO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(grammaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(grammaParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(grammaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(grammaParser.RPAREN, 0); }
		public TerminalNode N() { return getToken(grammaParser.N, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(grammaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(grammaParser.COMMA, i);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).exitFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaVisitor ) {
				try {
					return ((grammaVisitor<? extends T>)visitor).visitFunc(this);
				} catch (Exception e) {
					throw new RuntimeException(e.getMessage());
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			type();
			setState(135);
			match(ID);
			setState(136);
			match(LPAREN);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 135291469824L) != 0) {
				{
				setState(137);
				type();
				setState(138);
				match(ID);
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(139);
					match(COMMA);
					setState(140);
					type();
					setState(141);
					match(ID);
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(150);
			match(RPAREN);
			setState(151);
			match(N);
			setState(153); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152);
				stat();
				}
				}
				setState(155); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TAB );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(grammaParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaVisitor ) {
				try {
					return ((grammaVisitor<? extends T>)visitor).visitReturn(this);
				} catch (Exception e) {
					throw new RuntimeException(e.getMessage());
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnContext return_() throws RecognitionException {
		ReturnContext _localctx = new ReturnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_return);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(RETURN);
			setState(158);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(grammaParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(grammaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(grammaParser.RPAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(grammaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(grammaParser.COMMA, i);
		}
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaListener ) ((grammaListener)listener).exitCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaVisitor ) {
				try {
					return ((grammaVisitor<? extends T>)visitor).visitCall(this);
				} catch (Exception e) {
					throw new RuntimeException(e.getMessage());
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(ID);
			setState(161);
			match(LPAREN);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 3458764926421737472L) != 0) {
				{
				setState(162);
				expr(0);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(163);
					match(COMMA);
					setState(164);
					expr(0);
					}
					}
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(172);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CastContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(grammaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(grammaParser.RPAREN, 0); }
		public TerminalNode ND() { return getToken(grammaParser.ND, 0); }
		public TerminalNode DOC() { return getToken(grammaParser.DOC, 0); }
		public TerminalNode TXT() { return getToken(grammaParser.TXT, 0); }
		public TerminalNode ID() { return getToken(grammaParser.ID, 0); }
		public ConstContext const_() {
			return getRuleContext(ConstContext.class,0);
		}
		public CastContext cast() {
			return getRuleContext(CastContext.class,0);
		}
